# website

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  mise.toml  railway.json
assets/: styles.css
content/: data.json
content/pages/: about.md  reading.md  root.md
content/posts/: hello.md  how-this-works.md
docs/plans/: 2026-07-18-topcoat-port-design.md  2026-07-18-topcoat-port.md
src/: config.rs  error.rs  lib.rs  main.rs  templates.rs
src/content/: embedded.rs  markdown.rs  mod.rs  model.rs  repository.rs
src/flair/: mod.rs
src/routes/: health.rs  mod.rs  modules.rs  pages.rs  posts.rs  tags.rs
src/views/: components.rs  layout.rs  mod.rs  pages.rs
