[package]
name = "dathagerty"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
resolver = "2"
build = "build.rs"

[dependencies]
async-trait = "0.1"
build-info = "0.0.40"
chrono = { version = "0.4", features = ["serde"] }
comrak = { version = "0.48", default-features = false, features = ["syntect"] }
hyper-util = { version = "0.1", features = ["server-auto", "server-graceful", "tokio"] }
percent-encoding = "2"
rand = "0.9"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
topcoat = "=0.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"

[build-dependencies]
build-info-build = "0.0.40"

[dev-dependencies]
sha2 = "0.11"
tempfile = "3"
